[tool.poetry]
name = "credit-risk"
version = "0.1.0"
description = ""
authors = ["Vinicius Castro <vinicius.castro97@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
